chnaged header img, fixxed some alignment issues, updated my about section, changed responsive design

--- a/vite-project/src/components/About.css
+++ b/vite-project/src/components/About.css
@@ -1,5 +1,5 @@
 .about-container {
-    height: 580px;
+    height: 680px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,6 +28,7 @@ h1 {
     margin: 0;
     letter-spacing: 2px;
     font-weight: 600;
+    color: #dddddd;
     /* color: rgb(93, 168, 203); */
 }
 
@@ -35,9 +36,9 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: url(/star.jpg)no-repeat center center fixed;
-    background-size: cover;
-    height: 600px;
+    background: url(/star.jpg) no-repeat center center fixed;
+    background-size: contain;
+    height: 700px;
     width: 100vw;
 }
 
@@ -45,7 +46,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: url(/star.jpg)no-repeat center center fixed;
+    background: url(/star.jpg) no-repeat center center fixed;
     background-repeat: no-repeat;
     background-size: cover;
     height: 600px;
@@ -72,7 +73,6 @@ section > h3 {
     font-weight: 400;
 }
 
-
 @media (max-width: 1000px) {
     .about-wrapper {
         display: flex;
@@ -82,8 +82,71 @@ section > h3 {
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center top;
-        height: 600px;
-        width: 100vw;  
+        height: 400px;
+        width: 100vw;
     }
 
+    .about-container {
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 30px;
+        margin-top: -40px;
+        position: relative;
+        color: rgb(196, 195, 195);
+        background-color: rgb(0, 0, 0, 0.5);
+    }
+}
+
+@media (max-width: 620px) {
+    .about-wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-image: url(/star.jpg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center top;
+        height: 400px;
+        width: 100vw;
+    }
+
+    .about-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 30px;
+        padding-top: 350px;
+        position: relative;
+        color: rgb(196, 195, 195);
+        background-color: rgb(0, 0, 0, 0);
+        padding-bottom: -20px;
+    }
+}
+
+@media (max-width: 450px) {
+    .about-wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-image: url(/star.jpg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center top;
+        height: 400px;
+        width: 100vw;
+    }
+
+    .about-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 30px;
+        padding-top: 270px;
+        position: relative;
+        color: rgb(196, 195, 195);
+        background-color: rgb(0, 0, 0, 0);
+        padding-bottom: -20px;
+    }
 }
