--- a/vite-project/src/components/Contact.css
+++ b/vite-project/src/components/Contact.css
@@ -32,7 +32,8 @@ footer {
     height: 24px;
     /* filter: invert(87%) sepia(0%) saturate(2879%) hue-rotate(152deg)
         brightness(70%) contrast(114%); */
-        filter: invert(100%) sepia(0%) saturate(4431%) hue-rotate(27deg) brightness(114%) contrast(73%)
+    filter: invert(100%) sepia(0%) saturate(4431%) hue-rotate(27deg)
+        brightness(114%) contrast(73%);
 }
 
 .light-mail {
@@ -43,7 +44,8 @@ footer {
     height: 24px;
     /* filter: invert(87%) sepia(0%) saturate(2879%) hue-rotate(152deg)
         brightness(70%) contrast(114%); */
-        filter: invert(100%) sepia(0%) saturate(4431%) hue-rotate(27deg) brightness(114%) contrast(73%)
+    filter: invert(100%) sepia(0%) saturate(4431%) hue-rotate(27deg)
+        brightness(114%) contrast(73%);
 }
 
 .light-linkedin {
@@ -52,7 +54,8 @@ footer {
 
 .github {
     height: 26px;
-    filter: invert(100%) sepia(0%) saturate(4431%) hue-rotate(27deg) brightness(114%) contrast(73%)
+    filter: invert(100%) sepia(0%) saturate(4431%) hue-rotate(27deg)
+        brightness(114%) contrast(73%);
 }
 
 .light-github {
